# web-scraper

./: .gitignore  LICENSE  README.md  config.yaml  main.py  pyproject.toml  requirements.txt  scraper.py
.github/workflows/: tests.yml
examples/: books_toscrape.yaml  quotes_js.yaml
tests/: conftest.py  test_cli.py  test_config.py  test_exporters.py  test_extractors.py  test_parsers.py
webscraper/: __init__.py  __main__.py  cli.py
webscraper/core/: __init__.py  config.py  scraper.py  session.py
webscraper/exporters/: __init__.py  base.py  database.py  file.py
webscraper/extractors/: __init__.py  base.py  css.py
webscraper/parsers/: __init__.py  dynamic.py  static.py
webscraper/utils/: __init__.py  logging.py  retry.py  state.py
